cabal-version: 2.4

name: zmq
version: 0

common component
  build-depends:
    base,

  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Wall

common executable-component
  import:
    component

  ghc-options:
    -O
    -threaded
    -with-rtsopts=-N

library
  import:
    component

  build-depends:
    bytestring,
    libzmq,
    say,
    slave-thread,
    stm,
    text,
    zmqhs,

  build-tool-depends:
    hsc2hs:hsc2hs ^>= 0.68,

  exposed-modules:
    Zmq
    Zmq.ConcurrentPublisher
    Zmq.Publisher
    Zmq.Subscriber
    Zmq.XPublisher
    Zmq.XSubscriber

  hs-source-dirs:
    src/zmq

  other-modules:
    Zmq.API.Bind
    Zmq.API.Connect
    Zmq.API.CtxTerm
    Zmq.API.Disconnect
    Zmq.API.GetSockOpt
    Zmq.API.PollerDestroy
    Zmq.API.PollerNew
    Zmq.API.Recv
    Zmq.API.Send
    Zmq.API.SetSockOpt
    Zmq.API.Socket
    Zmq.API.Subscribe
    Zmq.API.Unbind
    Zmq.Context
    Zmq.Endpoint
    Zmq.Error
    Zmq.Exception
    Zmq.Internal
    Zmq.ManagedSocket
    Zmq.Poller
    Zmq.Prelude
    Zmq.Socket
    Zmq.SubscriptionMessage

library zmqhs
  import:
    component

  build-depends:
    libzmq,
    text,

  exposed-modules:
    Zmqhs
    Zmqhs.Context
    Zmqhs.Endpoint
    Zmqhs.Socket
    Zmqhs.SocketType

  hs-source-dirs:
    src/zmqhs

library libzmq
  import:
    component

  build-tool-depends:
    hsc2hs:hsc2hs ^>= 0.68,

  exposed-modules:
    Libzmq
    Libzmq.Constants
    Libzmq.Context
    Libzmq.Socket
    Zmq.FFI

  hs-source-dirs:
    src/libzmq

  pkgconfig-depends:
    libzmq == 4.3.2

executable zmq
  import:
    executable-component

  build-depends:
    text,
    zmq,

  hs-source-dirs:
    app

  main-is:
    Main.hs

test-suite tests
  import:
    executable-component

  build-depends:
    hedgehog,
    lens,
    say,
    tasty,
    tasty-hedgehog,
    text,
    unliftio,
    zmq,

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0
