cabal-version: 3.0

name: zmq
version: 0

common component
  build-depends:
    base,

  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Wall

common executable-component
  import:
    component

  ghc-options:
    -O
    -threaded
    -with-rtsopts=-N

library
  import:
    component

  build-depends:
    bytestring,
    libzmq,
    say,
    slave-thread,
    stm,
    text,
    unliftio,
    zmqhs,

  build-tool-depends:
    hsc2hs:hsc2hs ^>= 0.68,

  exposed-modules:
    Zmq
    Zmq.Publisher
    Zmq.Subscriber
    Zmq.XPublisher
    Zmq.XSubscriber

  hs-source-dirs:
    src/zmq

  other-modules:
    Zmq.API.Send
    Zmq.Context
    Zmq.Endpoint
    Zmq.Internal
    Zmq.Prelude
    Zmq.SubscriptionMessage

library zmqhs
  import:
    component

  build-depends:
    bytestring,
    libzmq,
    text,
    unliftio,

  exposed-modules:
    Zmqhs
    Zmqhs.Context
    Zmqhs.Endpoint
    Zmqhs.Error
    Zmqhs.Frame
    -- TODO make this internal
    Zmqhs.Internal.Error
    Zmqhs.Socket
    Zmqhs.SocketType

  hs-source-dirs:
    src/zmqhs


library libzmq
  import:
    component

  build-tool-depends:
    hsc2hs:hsc2hs ^>= 0.68,

  exposed-modules:
    Libzmq
    Libzmq.Constants
    Libzmq.Context
    Libzmq.Error
    Libzmq.Frame
    Libzmq.Socket

  hs-source-dirs:
    src/libzmq

  pkgconfig-depends:
    libzmq == 4.3.2

executable zmq
  import:
    executable-component

  build-depends:
    text,
    zmq,

  hs-source-dirs:
    app

  main-is:
    Main.hs

test-suite tests
  import:
    executable-component

  build-depends:
    hedgehog,
    hspec,
    say,
    text,
    unliftio,
    zmq,
    zmq:zmqhs,

  hs-source-dirs:
    test

  main-is:
    Main.hs

  other-modules:
    ZmqhsSpec

  type:
    exitcode-stdio-1.0
