cabal-version: 3.0

name: zmq
version: 0

common component
  build-depends:
    base,

  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Wall

common executable-component
  import:
    component

  ghc-options:
    -O
    -threaded
    -with-rtsopts=-N

library
  import:
    component

  build-depends:
    bytestring,
    libzmq,
    say,
    slave-thread,
    stm,
    text,
    unliftio,
    zmqhs,

  build-tool-depends:
    hsc2hs:hsc2hs ^>= 0.68,

  exposed-modules:
    Zmq
    Zmq.Publisher
    Zmq.Subscriber
    Zmq.XPublisher
    Zmq.XSubscriber

  hs-source-dirs:
    src/zmq

  other-modules:
    Zmq.Context
    Zmq.Endpoint
    Zmq.Internal
    Zmq.SubscriptionMessage

executable zmq
  import:
    executable-component

  build-depends:
    text,
    zmq,

  hs-source-dirs:
    app

  main-is:
    Main.hs

test-suite tests
  import:
    executable-component

  build-depends:
    hedgehog,
    hspec,
    say,
    text,
    unliftio,
    zmq,

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0
