cabal-version: 3.0

name: libzmq-bindings
version: 0
description: libzmq 4.3.4 bindings

library
  build-depends:
    base,
  build-tool-depends: hsc2hs:hsc2hs ^>= 0.68
  default-extensions:
    CApiFFI
  default-extensions:
    DerivingStrategies
    InterruptibleFFI
  default-language: GHC2021
  exposed-modules:
    Libzmq.Bindings
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  hs-source-dirs: src
  other-modules:
    Libzmq.Bindings.Internal.Constants
    Libzmq.Bindings.Internal.Functions
    Libzmq.Bindings.Internal.Types
  pkgconfig-depends: libzmq == 4.3.4
