cabal-version: 3.0

name: libzmq
version: 0
description: libzmq 4.3.4 bindings

library
  build-depends:
    base,
    libzmq-bindings,
  default-language: GHC2021
  exposed-modules:
    Libzmq
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  hs-source-dirs: src
  other-modules:
    Libzmq.Internal.Functions
    Libzmq.Internal.Types
