cabal-version: 3.0

name: zmq-guide-examples
version: 0

common component
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

executable hwserver
  import: component
  build-depends: base, zmq
  ghc-options: -threaded -with-rtsopts=-N2
  main-is: Hwserver.hs
