cabal-version: 3.0

name: zmq-guide-examples
version: 0

common component
  build-depends: base, zmq
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -threaded
    -with-rtsopts=-N2
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

common bytestring
  build-depends: bytestring ^>= 0.11.4

common random
  build-depends: random ^>= 1.2.1

executable hwserver
  import: component
  main-is: Hwserver.hs

executable hwclient
  import: component
  main-is: Hwclient.hs

executable version
  import: component
  main-is: Version.hs

executable wuserver
  import: component, bytestring, random
  main-is: Wuserver.hs
