cabal-version: 3.0

name: zmq-guide-examples
version: 0

executable example
  build-depends:
    base,
    bytestring ^>= 0.11.4,
    ki ^>= 1.0,
    random ^>= 1.2.1,
    text ^>= 2.0,
    zmq,
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -O
    -eventlog
    -rtsopts
    -threaded
    -with-rtsopts=-N4
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  main-is: Main.hs
