cabal-version: 3.0

name: zmq
version: 0

common component
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: component
  build-depends:
    array ^>= 0.5.3,
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
    bytestring ^>= 0.11.0,
    containers ^>= 0.6,
    libzmq,
    libzmq-bindings,
    text ^>= 2.0,
  exposed-modules:
    Zmq
    Zmq.Dealer
    Zmq.Publisher
    Zmq.Puller
    Zmq.Pusher
    Zmq.Replier
    Zmq.Requester
    Zmq.Router
    Zmq.Subscriber
    Zmq.XPublisher
    Zmq.XSubscriber
  hs-source-dirs: src
  other-modules:
    Zmq.Internal.Context
    Zmq.Internal.Options
    Zmq.Internal.Poll
    Zmq.Internal.Socket
    Zmq.Internal.SocketFinalizer
    Zmq.Error
    Zmq.Subscription

test-suite tests
  import: component
  build-depends:
    base,
    hedgehog,
    hspec,
    text,
    zmq,
  ghc-options: -threaded -with-rtsopts=-N2
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
