cabal-version: 3.0

name: zmq
version: 0

common component
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RoleAnnotations
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: component
  build-depends:
    -- FIXME want to get rid of array, primitive es mejor
    array ^>= 0.5.3,
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
    base64 ^>= 0.4,
    bytestring ^>= 0.11.0,
    containers ^>= 0.6,
    libzmq,
    libzmq-bindings,
    primitive ^>= 0.8,
    random ^>= 1.2,
    text ^>= 2.0,
    text-short ^>= 0.1.5,
  exposed-modules:
    Zmq
    Zmq.Dealer
    Zmq.Pair
    Zmq.Pub
    Zmq.Pull
    Zmq.Push
    Zmq.Rep
    Zmq.Req
    Zmq.Router
    Zmq.Sub
    Zmq.XPub
    Zmq.XSub
  hs-source-dirs: src
  other-modules:
    Zmq.Internal.Context
    Zmq.Internal.Curve
    Zmq.Internal.Options
    Zmq.Internal.Poll
    Zmq.Internal.Socket
    Zmq.Internal.SocketFinalizer
    Zmq.Internal.SomeSocket
    Zmq.Internal.X
    Zmq.Error
    Zmq.Subscription
