cabal-version: 3.0

name: zmqhs
version: 0

common component
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: component
  build-depends:
    base,
    bytestring,
    libzmq,
    text,
    unliftio,
  exposed-modules:
    Zmqhs
    Zmqhs.Context
    Zmqhs.Endpoint
    Zmqhs.Error
    Zmqhs.Frame
    -- TODO make this internal
    Zmqhs.Internal.Error
    Zmqhs.Socket
    Zmqhs.SocketType
  hs-source-dirs: src

test-suite tests
  import: component
  build-depends:
    base,
    hspec,
    zmqhs,
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
